--- a/Projekat/TuristickaAgencija/TuristickaAgencija.csproj
+++ b/Projekat/TuristickaAgencija/TuristickaAgencija.csproj
@@ -102,6 +102,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Placanje.xaml.cs">
+      <DependentUpon>Placanje.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\SignUp.xaml.cs">
       <DependentUpon>SignUp.xaml</DependentUpon>
     </Compile>
@@ -136,6 +139,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\Placanje.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\SignUp.xaml">
       <SubType>Designer</SubType>
