--- a/Projekat/TuristickaAgencija/TuristickaAgencija.csproj
+++ b/Projekat/TuristickaAgencija/TuristickaAgencija.csproj
@@ -95,6 +95,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\AdminPanel.xaml.cs">
+      <DependentUpon>AdminPanel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Galerija.xaml.cs">
       <DependentUpon>Galerija.xaml</DependentUpon>
     </Compile>
@@ -139,6 +142,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="View\AdminPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Galerija.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
