--- a/Projekat/TuristickaAgencija/TuristickaAgencija.csproj
+++ b/Projekat/TuristickaAgencija/TuristickaAgencija.csproj
@@ -95,13 +95,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Klase\Admin.cs" />
-    <Compile Include="Klase\Lokacija.cs" />
-    <Compile Include="Klase\Osoba.cs" />
-    <Compile Include="Klase\Putnik.cs" />
-    <Compile Include="Klase\TuristickaAgencija.cs" />
-    <Compile Include="Klase\Uposlenik.cs" />
-    <Compile Include="Klase\Vodic.cs" />
+    <Compile Include="Model\Admin.cs" />
+    <Compile Include="Model\Lokacija.cs" />
+    <Compile Include="Model\Osoba.cs" />
+    <Compile Include="Model\Putnik.cs" />
+    <Compile Include="Model\TuristickaAgencija.cs" />
+    <Compile Include="Model\Uposlenik.cs" />
+    <Compile Include="Model\Vodic.cs" />
     <Compile Include="View\Admin.xaml.cs">
       <DependentUpon>Admin.xaml</DependentUpon>
     </Compile>
@@ -117,8 +117,8 @@
     <Compile Include="View\LogIn.xaml.cs">
       <DependentUpon>LogIn.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
+    <Compile Include="View\PocetnaStranica.xaml.cs">
+      <DependentUpon>PocetnaStranica.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\OnlinePlacanje.xaml.cs">
@@ -191,7 +191,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\MainPage.xaml">
+    <Page Include="View\PocetnaStranica.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -233,7 +233,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Model\" />
     <Folder Include="ViewModel\" />
   </ItemGroup>
   <ItemGroup>
