--- a/Projekat/TuristickaAgencijaFluffy/TuristickaAgencijaFluffy/TuristickaAgencijaFluffy.csproj
+++ b/Projekat/TuristickaAgencijaFluffy/TuristickaAgencijaFluffy/TuristickaAgencijaFluffy.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Model\TuristickaAgencija.cs" />
     <Compile Include="Model\Uposlenik.cs" />
     <Compile Include="Model\Vodic.cs" />
+    <Compile Include="ViewModel\AdminViewModel.cs" />
     <Compile Include="ViewModel\LokacijaViewModel.cs" />
     <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -126,7 +127,6 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="TuristickaAgencijaFluffy_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\barcelona.jpg" />
